Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for 1.4 (not yet released)
==================================

 o #15522 Added default XML parser / XSL settings for IBM JDK 1.4 and IBM JDK 1.5

 o #15513 You can now send messages containing one plugin as in
          xmlBlasterPlugins.xml and this is dynamically added without
          xmlBlaster restart. Further configuration can be done over jconsole.
          Sending a jar file with plugin specific code is not yet implemented.
          Example:
            java javaclients.HelloWorldPublish -oid __sys__RunlevelManager -contentFile plugin.xml

 o #15511 Added support for runlevel plugin activation/deactivation from JMX / jconsole
 
 o #15506 Fixed C client library cast for Solaris


Changes for 1.3 [2006-09-10] #15505
===================================

 o #15504 Fixed NPE in CacheQueueInterceptorPlugin.removeQueueSizeListener() if queue is shutdown

 o #15490 Fixed JMS_REPLY_TO = "__jms:JMSReplyTo" to contain new introduced "__jms:" prefix

 o #15488 Fixed QueueQueryPlugin / receive() to support multiple blocking clients on same queue instance

 o #15485 added to MINSTR token for currentTime to the DbWatcher TimestampDetector

 o #15465 receive() leaking threads fixed:
          The I_Queue implementations now fire changed() in shutdown as well
          allowing the blocking queue query threads to return.
          Before the receive() threads were leaked if the queue disappeared
          as a notify was never triggered

 o #15459 Bugfix receive(): Could deadlock because of synchronize declaration in CoreHandler

 o #15446 htpassed plugin: Extended to support authorization on 'xpath:' and 'domain:' specific access

 o #15438 SOCKET protocol: Calling xmlBlaster core is now in a dispatched thread to support concurrent ping()
          and other method invocations. Fixes for example long lasting subscribes and blocking gets.
